GNOME Bugzilla – Bug 692203
applicationwindow: fix mem leak
Last modified: 2013-01-21 23:47:57 UTC
See patch
Created attachment 234012 [details] [review] applicationwindow: fix mem leak In the error path, code is leaking a ref to a GVariant.
Review of attachment 234012 [details] [review]: good catch
Attachment 234012 [details] pushed as 2d820de - applicationwindow: fix mem leak